xml/src1/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Accrediting_Agency__c</fullName>
        <label>Accrediting Agency</label>
        <picklist>
            <picklistValues>
                <fullName>Association of Theological Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle States Association M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New England Association EH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Central Association NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northwest Commission NW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Association SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Association (Junior) WJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Association (Senior) WC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Affiliation_Lookup__c</fullName>
        <formula>IF(INCLUDES(Affiliation__c, &apos;Public&apos;), &apos;Public:&apos;, &apos;&apos;) &amp; &apos;&apos; 
+ IF(INCLUDES(Affiliation__c, &apos;Private&apos;), &apos;Private:&apos;, &apos;&apos;) &amp; &apos;&apos; 
+ IF(INCLUDES(Affiliation__c, &apos;UM-Related&apos;), &apos;UM-Related:&apos;, &apos;&apos;) &amp; &apos;&apos; 
+ IF(INCLUDES(Affiliation__c, &apos;University Senate Approved&apos;), &apos;University Senate Approved:&apos;, &apos;&apos;) &amp; &apos;&apos; 
+ IF(INCLUDES(Affiliation__c, &apos;HBCU&apos;), &apos;HBCU:&apos;, &apos;&apos;) &amp; &apos;&apos; 
+ IF(INCLUDES(Affiliation__c, &apos;BCF&apos;), &apos;BCF&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[Affiliation Lookup]</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <description>Affiliation to Schools</description>
        <label>Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>AUMTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HBCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAMSCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NASCUMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UM-Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University Senate Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Alternate_Name__c</fullName>
        <description>Alternate Name for the Organization</description>
        <inlineHelpText>Alternate Name for the Organization</inlineHelpText>
        <label>Alternate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Conference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Annual Conference</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Annual Conference</relationshipLabel>
        <relationshipName>Annual_Conference</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carnegie_Classifications__c</fullName>
        <label>Carnegie Classifications</label>
        <picklist>
            <picklistValues>
                <fullName>Associates Colleges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctorate-Granting Universities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master&apos;s Colleges and Universities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baccalaureate Colleges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Focus Institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tribal Colleges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Denomination_Other__c</fullName>
        <description>Other than Denominations in the Picklist Denomination Family</description>
        <label>Denomination (Other/Specify)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denomination__c</fullName>
        <description>Denominations</description>
        <label>Denomination</label>
        <picklist>
            <picklistValues>
                <fullName>United Methodist Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Methodist, Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>African Methodist Episcopal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>African Methodist Episcopal Zion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christian Methodist Episcopal Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congregational Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Methodist Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missionary Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primitive Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reformed Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wesleyan Methodist Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>“Evangelical” Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>“Traditional” Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent Christian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adventist, Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Baptist Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Baptist Churches in USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Lutheran Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anabaptist, Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anglican/Episcopal, Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anglican Church (Church of England)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anglican Orthodox Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apostolic Christian Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apostolic Holiness Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apostolic Lutheran Church in America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apostolic Pentecostal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Denominations_Funding__c</fullName>
        <description>Denominational Family for Collegiate Ministry&apos;s</description>
        <label>Denomination(s) Funding</label>
        <picklist>
            <controllingField>Primary_Source_Of_Funding__c</controllingField>
            <picklistValues>
                <fullName>Adventists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anabaptist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anglican/Episcopal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baptist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congregationalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lutheran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nondenominational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Protestant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pentecostal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pietist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presbyterian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reformed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restorationist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other/Specify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Distance_Education__c</fullName>
        <label>Distance Education</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>District</description>
        <label>District</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>District</relationshipLabel>
        <relationshipName>District</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dues__c</fullName>
        <label>Dues</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpaid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GBHEM_DataCenter_Conference_Domain_ID__c</fullName>
        <description>Conference_Domain id</description>
        <label>GBHEM DataCenter Conference Domain ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBHEM_DataCenter_District_Domain_ID__c</fullName>
        <label>GBHEM DataCenter District Domain ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBHEM_DataCenter_School_Id__c</fullName>
        <label>GBHEM DataCenter School Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBHEM_DataCenter_camp_min__c</fullName>
        <description>data center camp_min_unit_tbl id</description>
        <inlineHelpText>data center camp_min_unit_tbl id</inlineHelpText>
        <label>GBHEM DataCenter camp min unit id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBHEM_DataCenter_camp_min_school_id__c</fullName>
        <label>GBHEM_DataCenter_camp_min_school_id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <description>A unique organization id that is searchable.</description>
        <displayFormat>O-{0000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>A unique organization id that is searchable.</inlineHelpText>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Institution_Type__c</fullName>
        <description>Different Institute types</description>
        <label>Institution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Preschool/Elementary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Collegiate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two-Year Institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Baccalaureate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleges/Universities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminary/Theological</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course of Study School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensing School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Jurisdiction</description>
        <label>Jurisdiction</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Jurisdiction</relationshipLabel>
        <relationshipName>Jurisdiction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Church_Affiliation__c</fullName>
        <inlineHelpText>Enter Church Name. Separate multiple churches by Semicolons.
Eg :  Trinity United Methodist; West End United Methodist</inlineHelpText>
        <label>Local Church Affiliation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Migration_Key__c</fullName>
        <description>This key is used only for migration purposes only.</description>
        <inlineHelpText>This key is used only for migration purposes only.</inlineHelpText>
        <label>Migration Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Mailing_AddressLine1__c</fullName>
        <description>Organization Street</description>
        <label>Organization Mailing Address Line1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Mailing_Address_Line2__c</fullName>
        <description>Organization Mailing Address Line2 from address</description>
        <label>Organization Mailing Address Line2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Mailing_City__c</fullName>
        <description>Organization Mailing city</description>
        <label>Organization Mailing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Mailing_Country__c</fullName>
        <description>Organization Country</description>
        <label>Organization Mailing Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Mailing_State__c</fullName>
        <description>Organization Mailing State</description>
        <label>Organization Mailing State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Mailing_Zip_Postal_Code__c</fullName>
        <description>Organization Zip Postal Code</description>
        <label>Organization Mailing Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Position Object Lookup object</description>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Source_Of_Funding__c</fullName>
        <label>Primary Source Of Funding</label>
        <picklist>
            <picklistValues>
                <fullName>United Methodist (Annual Conference, Board)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecumenical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Programs_Offered_Lookup__c</fullName>
        <formula>IF(INCLUDES(Programs_offered__c, &apos;Course of Study Program&apos;), &apos;Course of Study Program:&apos;, &apos;&apos;) &amp; &apos;&apos; 
+ IF(INCLUDES(Programs_offered__c, &apos;Licensing Program&apos;), &apos;Licensing Program&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[Programs Offered Lookup]</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Programs_offered__c</fullName>
        <description>Programs offered by the schoold</description>
        <label>Programs offered</label>
        <picklist>
            <picklistValues>
                <fullName>A.A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A.A.S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A.S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.B.A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.F.A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.I.S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.M.E.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.P.A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.S.C.E.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.S.E.E.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.S.N.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.S.W.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Min.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ed. D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.A. in CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.A. in RE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.A.R.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.A.R.S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.A.T.S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.B.A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.C.E.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M. Div.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M. Ed.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.M.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.R.E.</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Schools</description>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account(School)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SearchLayout_City__c</fullName>
        <description>For Search Layouts Of Accounts to Display City on Layouts for the Organizations</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchLayout_State__c</fullName>
        <description>For Search Layouts to display state on the layouts for the organization</description>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Organization Status</description>
        <label>Organization Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year_Established__c</fullName>
        <description>The year School is Established</description>
        <label>Year Established</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Organizations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>PARENT_NAME</columns>
        <columns>SearchLayout_City__c</columns>
        <columns>SearchLayout_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Organizations</label>
    </listViews>
    <listViews>
        <fullName>All_Inactive_Organizations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>PARENT_NAME</columns>
        <columns>SearchLayout_City__c</columns>
        <columns>SearchLayout_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>All Inactive Organizations</label>
    </listViews>
    <listViews>
        <fullName>Annual_Conferences_Active</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>SearchLayout_City__c</columns>
        <columns>SearchLayout_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Annual_Conference</value>
        </filters>
        <label>Annual Conferences (Active)</label>
    </listViews>
    <listViews>
        <fullName>BCF_Schools_Active</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>SearchLayout_City__c</columns>
        <columns>SearchLayout_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Educational_Institutions</value>
        </filters>
        <filters>
            <field>Affiliation__c</field>
            <operation>includes</operation>
            <value>BCF</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>BCF Schools (Active)</label>
    </listViews>
    <listViews>
        <fullName>Collegiate_Ministry_Active</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>SearchLayout_City__c</columns>
        <columns>SearchLayout_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.collegiate_Ministry</value>
        </filters>
        <label>Collegiate Ministry (Active)</label>
    </listViews>
    <listViews>
        <fullName>Districts_Active</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>SearchLayout_City__c</columns>
        <columns>SearchLayout_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.District</value>
        </filters>
        <label>Districts (Active)</label>
    </listViews>
    <listViews>
        <fullName>Educational_Institutions_Active</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>SearchLayout_City__c</columns>
        <columns>SearchLayout_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Educational_Institutions</value>
        </filters>
        <label>Educational Institutions  (Active)</label>
    </listViews>
    <listViews>
        <fullName>Episcopal_Areas_Active</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>SearchLayout_City__c</columns>
        <columns>SearchLayout_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Episcopal_Area</value>
        </filters>
        <label>Episcopal Areas (Active)</label>
    </listViews>
    <listViews>
        <fullName>General_Boards_and_Agencies_Active</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>SearchLayout_City__c</columns>
        <columns>SearchLayout_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.General_Boards_and_Agencies</value>
        </filters>
        <label>General Boards and Agencies (Active)</label>
    </listViews>
    <listViews>
        <fullName>Jurisdiction_Active</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>SearchLayout_City__c</columns>
        <columns>SearchLayout_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Jurisdiction</value>
        </filters>
        <label>Jurisdiction (Active)</label>
    </listViews>
    <listViews>
        <fullName>Local_Churches_Active</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>SearchLayout_City__c</columns>
        <columns>SearchLayout_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Local_Church</value>
        </filters>
        <label>Local Churches (Active)</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>UM_Related_Schools_Active</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>SearchLayout_City__c</columns>
        <columns>SearchLayout_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Educational_Institutions</value>
        </filters>
        <filters>
            <field>Affiliation__c</field>
            <operation>includes</operation>
            <value>UM-Related</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>UM-Related Schools (Active)</label>
    </listViews>
    <namedFilters>
        <fullName>Account_00NJ0000000FjAOMA0</fullName>
        <active>true</active>
        <field>Account.Annual_Conference__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Annual Conference</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_Annual Conference</name>
    </namedFilters>
    <namedFilters>
        <fullName>Account_00NJ0000000FkBWMA0</fullName>
        <active>true</active>
        <field>Account.School__c</field>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Educational Institutions</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_School</name>
        <sourceObject>Account</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>Account_00NJ0000000FkMZMA0</fullName>
        <active>true</active>
        <field>Account.Jurisdiction__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Jurisdiction</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_Jurisdiction</name>
    </namedFilters>
</CustomObject>